Register clicks on iOS fix

--- a/static/my.css
+++ b/static/my.css
@@ -51,3 +51,7 @@ hr { display: block; height: 1px;
     -moz-user-select: none; /* Firefox */
     user-select: none; /* Non-prefixed version, currently */
 }
+
+.card {
+    cursor: pointer;
+}
